refactor(crawler): replace URI with URL in XpathTransformer and ProtocolHelper
Migrate from java.net.URI/URISyntaxException to java.net.URL/MalformedURLException
for URL handling in FessXpathTransformer and ProtocolHelper to improve compatibility
with non-standard URLs that URI.create() rejects but URL handles correctly.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>