@@ -18,8 +18,8 @@ package org.codelibs.fess.crawler.transformer;
 import static org.codelibs.core.stream.StreamUtil.stream;
 
 import java.io.BufferedInputStream;
-import java.net.URI;
-import java.net.URISyntaxException;
+import java.net.MalformedURLException;
+import java.net.URL;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
@@ -411,12 +411,12 @@ public class FessXpathTransformer extends XpathTransformer implements FessTransf
             value = urlStr;
         }
         try {
-            final URI uri = URI.create(value);
-            final String host = uri.getHost();
+            final URL url = new URL(value);
+            final String host = url.getHost();
             if (StringUtil.isBlank(host) || "http".equalsIgnoreCase(host) || "https".equalsIgnoreCase(host)) {
                 return false;
             }
-        } catch (final IllegalArgumentException e) {
+        } catch (final MalformedURLException e) {
             return false;
         }
         return true;
@@ -726,10 +726,10 @@ public class FessXpathTransformer extends XpathTransformer implements FessTransf
      */
     protected String normalizeCanonicalUrl(final String baseUrl, final String canonicalUrl) {
         try {
-            final URI baseUri = URI.create(baseUrl);
-            final String resolveTarget = canonicalUrl.startsWith(":") ? baseUri.getScheme() + canonicalUrl : canonicalUrl;
-            return baseUri.resolve(resolveTarget).toString();
-        } catch (final IllegalArgumentException e) {
+            final URL u = new URL(baseUrl);
+            final String resolveTarget = canonicalUrl.startsWith(":") ? u.getProtocol() + canonicalUrl : canonicalUrl;
+            return new URL(u, resolveTarget).toString();
+        } catch (final MalformedURLException e) {
             logger.warn("Invalid canonical URL: baseUrl={}, canonicalUrl={}", baseUrl, canonicalUrl, e);
         }
         return null;
@@ -984,9 +984,9 @@ public class FessXpathTransformer extends XpathTransformer implements FessTransf
         List<RequestData> anchorList = new ArrayList<>();
         final String baseHref = getBaseHref(document);
         try {
-            final URI uri = getBaseUri(responseData.getUrl(), baseHref);
+            final URL url = getBaseUrl(responseData.getUrl(), baseHref);
             for (final Map.Entry<String, String> entry : childUrlRuleMap.entrySet()) {
-                for (final String u : getUrlFromTagAttribute(uri, document, entry.getKey(), entry.getValue(), responseData.getCharSet())) {
+                for (final String u : getUrlFromTagAttribute(url, document, entry.getKey(), entry.getValue(), responseData.getCharSet())) {
                     anchorList.add(RequestDataBuilder.newRequestData().get().url(u).build());
                 }
             }
@@ -1003,18 +1003,18 @@ public class FessXpathTransformer extends XpathTransformer implements FessTransf
     }
 
     /**
-     * Gets the base URI for resolving relative URLs.
+     * Gets the base URL for resolving relative URLs.
      *
      * @param currentUrl the current URL
      * @param baseHref the base href value from HTML
-     * @return the base URI
-     * @throws URISyntaxException if the URI is malformed
+     * @return the base URL
+     * @throws MalformedURLException if the URL is malformed
      */
-    protected URI getBaseUri(final String currentUrl, final String baseHref) throws URISyntaxException {
+    protected URL getBaseUrl(final String currentUrl, final String baseHref) throws MalformedURLException {
         if (baseHref != null) {
-            return getURI(currentUrl, baseHref);
+            return getURL(currentUrl, baseHref);
         }
-        return URI.create(currentUrl);
+        return new URL(currentUrl);
     }
 
     /**
@@ -1091,64 +1091,41 @@ public class FessXpathTransformer extends XpathTransformer implements FessTransf
      * Adds child URL from tag attribute value.
      *
      * @param urlList the list to add URLs to
-     * @param uri the base URI for resolving relative URLs
+     * @param url the base URL for resolving relative URLs
      * @param attrValue the attribute value containing the URL
      * @param encoding the character encoding
      */
     @Override
-    protected void addChildUrlFromTagAttribute(final List<String> urlList, final URI uri, final String attrValue, final String encoding) {
+    protected void addChildUrlFromTagAttribute(final List<String> urlList, final URL url, final String attrValue, final String encoding) {
         final String urlValue = attrValue.trim();
         String u = null;
         try {
-            final String resolveTarget = urlValue.startsWith(":") ? uri.getScheme() + urlValue : urlValue;
-            final URI childUri = uri.resolve(resolveTarget);
-            u = encodeUrl(normalizeUrl(childUri.toString()), encoding);
-        } catch (final IllegalArgumentException e) {
+            final URL childUrl = new URL(url, urlValue.startsWith(":") ? url.getProtocol() + urlValue : urlValue);
+            String childUrlStr = childUrl.toExternalForm();
+            final String path = childUrl.getPath();
+            if (path != null && path.startsWith("/../")) {
+                String normalizedPath = path;
+                while (normalizedPath.startsWith("/../")) {
+                    normalizedPath = normalizedPath.substring(3);
+                }
+                if (!normalizedPath.startsWith("/")) {
+                    normalizedPath = "/" + normalizedPath;
+                }
+                childUrlStr = childUrl.getProtocol() + "://" + childUrl.getAuthority() + normalizedPath;
+                if (childUrl.getQuery() != null) {
+                    childUrlStr += "?" + childUrl.getQuery();
+                }
+            }
+            u = encodeUrl(normalizeUrl(childUrlStr), encoding);
+        } catch (final MalformedURLException e) {
             final int pos = urlValue.indexOf(':');
             if (pos > 0 && pos < 10) {
                 u = encodeUrl(normalizeUrl(urlValue), encoding);
-            } else {
-                // Fallback: manually construct absolute URL for relative paths
-                final String scheme = uri.getScheme();
-                final String authority = uri.getAuthority();
-                if (scheme != null && authority != null) {
-                    final String fallbackUrl;
-                    if (urlValue.startsWith("//")) {
-                        fallbackUrl = scheme + ":" + urlValue;
-                    } else if (urlValue.startsWith("?") || urlValue.startsWith("#")) {
-                        fallbackUrl = uri.toString() + urlValue;
-                    } else if (urlValue.startsWith("/")) {
-                        String absPath = urlValue;
-                        while (absPath.startsWith("/../")) {
-                            absPath = absPath.substring(3);
-                        }
-                        if (!absPath.startsWith("/")) {
-                            absPath = "/" + absPath;
-                        }
-                        fallbackUrl = scheme + "://" + authority + absPath;
-                    } else {
-                        String basePath = uri.getRawPath();
-                        if (basePath == null) {
-                            basePath = "/";
-                        }
-                        final int lastSlash = basePath.lastIndexOf('/');
-                        final String parentPath = lastSlash >= 0 ? basePath.substring(0, lastSlash + 1) : "/";
-                        String resolvedPath = parentPath + urlValue;
-                        while (resolvedPath.startsWith("/../")) {
-                            resolvedPath = resolvedPath.substring(3);
-                        }
-                        if (!resolvedPath.startsWith("/")) {
-                            resolvedPath = "/" + resolvedPath;
-                        }
-                        fallbackUrl = scheme + "://" + authority + resolvedPath;
-                    }
-                    u = encodeUrl(normalizeUrl(fallbackUrl), encoding);
-                }
             }
         }
 
         if (u == null) {
-            logger.warn("Ignored child URL: childUrl={}, parentUri={}", attrValue, uri);
+            logger.warn("Ignored child URL: childUrl={}, parentUrl={}", attrValue, url);
             return;
         }
 
@@ -1200,9 +1177,9 @@ public class FessXpathTransformer extends XpathTransformer implements FessTransf
             if (thumbnailNode != null) {
                 final String content = thumbnailNode.getTextContent();
                 if (StringUtil.isNotBlank(content)) {
-                    final URI thumbnailUri = getURI(responseData.getUrl(), content);
-                    if (thumbnailUri != null) {
-                        return thumbnailUri.toString();
+                    final URL thumbnailUrl = getURL(responseData.getUrl(), content);
+                    if (thumbnailUrl != null) {
+                        return thumbnailUrl.toExternalForm();
                     }
                 }
             }
@@ -1212,9 +1189,9 @@ public class FessXpathTransformer extends XpathTransformer implements FessTransf
             if (ogImageNode != null) {
                 final String content = ogImageNode.getTextContent();
                 if (StringUtil.isNotBlank(content)) {
-                    final URI thumbnailUri = getURI(responseData.getUrl(), content);
-                    if (thumbnailUri != null) {
-                        return thumbnailUri.toString();
+                    final URL thumbnailUrl = getURL(responseData.getUrl(), content);
+                    if (thumbnailUrl != null) {
+                        return thumbnailUrl.toExternalForm();
                     }
                 }
             }
@@ -1266,9 +1243,9 @@ public class FessXpathTransformer extends XpathTransformer implements FessTransf
         final Node srcNode = attributes.getNamedItem("src");
         if (srcNode != null) {
             try {
-                final URI thumbnailUri = getURI(url, srcNode.getTextContent());
-                if (thumbnailUri != null) {
-                    return thumbnailUri.toString();
+                final URL thumbnailUrl = getURL(url, srcNode.getTextContent());
+                if (thumbnailUrl != null) {
+                    return thumbnailUrl.toExternalForm();
                 }
             } catch (final Exception e) {
                 if (logger.isDebugEnabled()) {
@@ -1306,27 +1283,27 @@ public class FessXpathTransformer extends XpathTransformer implements FessTransf
     }
 
     /**
-     * Creates a URI object from the current URL and a relative or absolute URL string.
+     * Creates a URL object from the current URL and a relative or absolute URL string.
      *
      * @param currentUrl the current URL as base
      * @param url the URL string to process
-     * @return the URI object
-     * @throws URISyntaxException if the URI is malformed
+     * @return the URL object
+     * @throws MalformedURLException if the URL is malformed
      */
-    protected URI getURI(final String currentUrl, final String url) throws URISyntaxException {
+    protected URL getURL(final String currentUrl, final String url) throws MalformedURLException {
         if (url != null) {
             if (url.startsWith("://")) {
                 final String protocol = currentUrl.split(":")[0];
-                return URI.create(protocol + url);
+                return new URL(protocol + url);
             }
             if (url.startsWith("//")) {
                 final String protocol = currentUrl.split(":")[0];
-                return URI.create(protocol + ":" + url);
+                return new URL(protocol + ":" + url);
             }
             if (url.startsWith("/") || url.indexOf(':') == -1) {
-                return URI.create(currentUrl).resolve(url);
+                return new URL(new URL(currentUrl), url);
             }
-            return URI.create(url);
+            return new URL(url);
         }
         return null;
     }
